Changed home page

--- a/Frontend/car-book/src/app/app.component.html
+++ b/Frontend/car-book/src/app/app.component.html
@@ -19,11 +19,8 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/service">Service</a>
           </li>
-          <!-- Location icon -->
           <li class="nav-item">
-            <a class="nav-link" routerLink="/location">
-              <i class="fas fa-map-marker-alt"></i> Location
-            </a>
+            <a class="nav-link" routerLink="/location"><i class="fas fa-map-marker-alt"></i> Location</a>
           </li>
           <!-- Common icon for login/signup -->
           <li class="nav-item">
