--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -171,10 +171,9 @@
                     <span class="bg-color primary-bg"> </span>
                     <div class="text">
                       <p class="text-sm text-success">
-                        <span class="text-dark">Showroom Visits</span>
-                        +25.55%
+                        <span class="text-dark">Positive Feedback</span>
                       </p>
-                      <h2>3456</h2>
+                      <h2>{{totalpositive}}</h2>
                     </div>
                   </div>
                 </li>
@@ -183,9 +182,9 @@
                     <span class="bg-color danger-bg"></span>
                     <div class="text">
                       <p class="text-sm text-danger">
-                        <span class="text-dark">No show</span> -2.05%
+                        <span class="text-dark">Negative Feedback</span> 
                       </p>
-                      <h2>3456</h2>
+                      <h2>{{totalnegative}}</h2>
                     </div>
                   </div>
                 </li>
