--- a/Frontend/Signup/src/app/signup/signup.component.html
+++ b/Frontend/Signup/src/app/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="login-wrap">
   <div class="login-html">
-    <!-- Toggle between Sign Up and Sign In -->
+    Toggle between Sign Up and Sign In
     <input id="tab-1" type="radio" name="tab" class="sign-in" [checked]="!isSignUp" (change)="toggleForm()">
     <label for="tab-1" class="tab">Sign In</label>
 
