--- a/Frontend/Signup/src/app/app.component.html
+++ b/Frontend/Signup/src/app/app.component.html
@@ -1,4 +1,4 @@
 
-<app-login></app-login>
+<!-- <app-login></app-login> -->
 <router-outlet></router-outlet>
-<app-signup></app-signup>
+<!-- <app-signup></app-signup> -->
