--- a/Frontend/Admin/src/app/navbar/navbar.component.html
+++ b/Frontend/Admin/src/app/navbar/navbar.component.html
@@ -18,7 +18,7 @@
       <ul>
         <li class="nav-item">
           <a
-            routerLink="/dashboard"
+          href="/dashboard"
            
           >
             <span class="icon">
@@ -35,7 +35,7 @@
 
         <li class="nav-item ">
           <a
-routerLink="/users"      
+          href="/users"      
           >
             <span class="icon">
               <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -53,7 +53,7 @@ routerLink="/users"
 
         <li class="nav-item">
           <a 
-          routerLink="/feedback"          >
+          href="/feedback"          >
             <span class="icon">
               <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -66,7 +66,7 @@ routerLink="/users"
 
         <li class="nav-item ">
           <a
-          routerLink="/bookings"      
+          href="/bookings"      
           >
             <span class="icon">
               <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -83,7 +83,7 @@ routerLink="/users"
 
         <li class="nav-item">
           <a
-          routerLink="/showrooms"           
+          href="/showrooms"           
           >
             <span class="icon">
               <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -103,7 +103,7 @@ routerLink="/users"
     
 
         <li class="nav-item">
-          <a routerLink="/notifications">
+          <a href="/notifications">
             <span class="icon">
               <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -122,7 +122,7 @@ routerLink="/users"
 
         <li class="nav-item">
           <a 
-          routerLink="/settings"          >
+          href="/settings"          >
             <span class="icon">
               <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
