--- a/Frontend/Admin/src/app/user-feedback/user-feedback.component.css
+++ b/Frontend/Admin/src/app/user-feedback/user-feedback.component.css
@@ -1,8 +1,23 @@
 #feedback {
   margin-left: 250px; /* Adjust based on the width of the navbar */
   width: calc(100% - 250px); /* Make the dashboard take the rest of the available space */
-  padding: 20px;
+  padding: 40px;
   box-sizing: border-box;
+}
+.orange-bg {
+  background-color: rgb(252, 203, 7);
+}
+
+.green-bg {
+  background-color: rgb(11, 105, 11);
+}
+
+.blue-bg {
+  background-color: rgb(47, 198, 225);
+}
+
+.yellow-bg {
+  background-color: rgba(105, 216, 21, 0.327);
 }
 
 a:focus,
@@ -75,6 +90,7 @@ p {
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
+  background-color: darkgreen;
 }
 
 .para-width-500 {
@@ -2078,7 +2094,7 @@ h6,
 }
 
 .info-bg {
-  background-color: #97ca31;
+  /* background-color: #97ca31; */
 }
 
 .dark-bg {
