--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -21,13 +21,11 @@
       <div class="col-xl-3 col-lg-4 col-sm-6 ">
         <div class="icon-card mb-30">
           <div class="icon purple">
-            <i class="bi bi-person-fill"></i>
-          </div>
+            <i class="bi bi-person-plus-fill"></i>          </div>
           <div class="content">
             <h6 class="mb-10">New Users</h6>
             <h3 class="text-bold mb-10">34567</h3>
             <p class="text-sm text-success">
-              +2.00%
               <span class="text-gray">(30 days)</span>
             </p>
           </div>
@@ -38,14 +36,12 @@
       <div class="col-xl-3 col-lg-4 col-sm-6">
         <div class="icon-card mb-30">
           <div class="icon success">
-            <i class="bi bi-currency-dollar"></i>
-          </div>
+            <i class="bi bi-people-fill"></i>          </div>
           <div class="content">
-            <h6 class="mb-10">Total Income</h6>
-            <h3 class="text-bold mb-10">$74,567</h3>
+            <h6 class="mb-10">Total Registered Users</h6>
+            <h3 class="text-bold mb-10">{{totalusers}}</h3>
             <p class="text-sm text-success">
-              <i class="lni lni-arrow-up"></i> +5.45%
-              <span class="text-gray">Increased</span>
+              <span class="text-gray">(2020-2024)</span>
             </p>
           </div>
         </div>
@@ -61,8 +57,7 @@
             <h6 class="mb-10">Total Showrooms</h6>
             <h3 class="text-bold mb-10">15</h3>
             <p class="text-sm text-success">
-              <i class="lni lni-arrow-down"></i> 2.00%
-              <span class="text-gray">Increase</span>
+              <span class="text-gray">(Renault, Nissan and Mitsubhishi)</span>
             </p>
           </div>
         </div>
@@ -72,14 +67,12 @@
       <div class="col-xl-3 col-lg-4 col-sm-6">
         <div class="icon-card mb-30">
           <div class="icon orange">
-            <i class="bi bi-car-front-fill"></i>
-          </div>
+            <i class="bi bi-patch-check-fill"></i>          </div>
           <div class="content">
-            <h6 class="mb-10">Total Car Models</h6>
-            <h3 class="text-bold mb-10">50</h3>
+            <h6 class="mb-10">User Satisfaction</h6>
+            <h3 class="text-bold mb-10">{{usersatisfaction}} %</h3>
             <p class="text-sm text-success">
-              +5.00%
-              <span class="text-gray"> Increase</span>
+              <span class="text-gray"> (According to Feedback - 2024)</span>
             </p>
           </div>
         </div>
