--- a/Frontend/Admin/src/app/users/users.component.html
+++ b/Frontend/Admin/src/app/users/users.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <!-- Search Bar -->
-  <div class="input-group mb-4 search-bar">
+  <!-- <div class="input-group mb-4 search-bar">
     <input
       type="text"
       class="form-control"
@@ -15,7 +15,7 @@
       (input)="filterUsers()"
     />
     <button class="btn btn-primary" type="button" (click)="filterUsers()">Search</button>
-  </div>
+  </div> -->
 
   <!-- Users Table -->
   <div class="table-responsive">
