--- a/Frontend/home/src/app/app.component.css
+++ b/Frontend/home/src/app/app.component.css
@@ -2,12 +2,12 @@
 .scroll-to-top-btn {
   position: fixed;
   bottom: 30px;
-  right: 30px;
-  background-color: #007bff;  /* Button color */
+  right: 22px;
+  background-color: #4CAF50;  /* Button color */
   color: white;
-  font-size: 24px;
+  font-size: 20px;
   border: none;
-  padding: 10px 15px;
+  padding: 10px 25px;
   border-radius: 50%;
   cursor: pointer;
   display: none; /* Hidden by default */
