--- a/Frontend/home/src/app/location/location.component.html
+++ b/Frontend/home/src/app/location/location.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
-
+<br><br><br><br><br>
 <div class="container">
   <div class="map-container">
-    <div id="map" style="height: 400px;"></div>
+    <div id="map" style="height: 100%;"></div>
   </div>
 
   <div class="shop-list">
@@ -16,5 +16,6 @@
       </li>
     </ul>
   </div>
+  <br><br><br>
 </div>
 
